- fixed bug of arrow showing up on FF on small screens - updated respondto mixin smartphone size for iphone 5 width

--- a/tooltips.scss
+++ b/tooltips.scss
@@ -98,6 +98,7 @@
       opacity: 1;
       pointer-events: all;
       transition-delay : 0ms;
+      @include respondTo(smartphone){ display: none; }
     }
   }
 }
